# Rust-Project

./: .env  Cargo.toml  README.md  resps.db
src/: main.rs
templates/: index.html
templates/products/: price.html
