[package]
name = "PizdecUbeiteMenya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlite = "^0"
actix-files = "*"
tera = "1"
lazy_static = "1.4.0"